--- a/basket/templates/basket/basket_panel.html
+++ b/basket/templates/basket/basket_panel.html
@@ -1,6 +1,8 @@
-{% if basket.goods %}
-    <p>В вашей корзине {{ basket.goods }} товаров на сумму <span class="price">{{ basket.price }} руб.</span><br />
+<div id="basket_panel">
+{% if request.basket.goods %}
+    <p>В вашей корзине {{ request.basket.goods }} товаров на сумму <span class="price">{{ request.basket.price }} руб.</span><br />
     <a href="{% url basket %}" title="Оформить заказ">Перейти в корзину</a></p>
 {% else %}
     <p>Ваша корзина пуста</p>
 {% endif %}
+</div>
