--- a/basket/templates/basket/thankyou.html
+++ b/basket/templates/basket/thankyou.html
@@ -2,5 +2,8 @@
 
 {% block content %}
     <h3>Заказ принят!</h3>
-    <p>Поздравляем, ваш заказ получен. В течение часа с вами свяжется наш менеджер для подтверждения наличия заказанных товаров.</p>
+    <p>Поздравляем, ваш заказ получен. 
+    Номер Вашего заказа {{ request.order }}.
+    Статус Вы сможете отследить на <a href="{% url order_status %}">странице проверки статуса заказа</a>. 
+    В течение часа с вами свяжется наш менеджер для подтверждения наличия заказанных товаров.</p>
 {% endblock %}
