--- a/basket/templates/basket/basket_history.html
+++ b/basket/templates/basket/basket_history.html
@@ -1,12 +1,14 @@
+{% if last %}
+<p>Предыдущий заказ:</p>
+    {% for item in last.items.all %}
+        <p>{{ forloop.counter }}. <a href="{{ item.content_object.get_absolute_url }}" title="Перейти на страницу товара" target="_blank" >
+        {{ item.content_object }}</a></p>
+    {% endfor %}
+{% endif %}
 {% if history.count %}
-    <p>Вы заказывали ранее:</p>
-    {% with history.0 as last_order %}
-        {% for item in last_order.items.all %}
-            <p>{{ forloop.counter }}. <a href="{{ item.content_object.get_absolute_url }}" title="Перейти на страницу товара" target="_blank" >
-            {{ item.content_object }}</a></p>
-        {% endfor %}
-    {% endwith %}
-    <p>Всего {{ history.count }} заказов на сумму {{ history_sum }} руб.</p>
-{% else %}
-    <p>Это первый заказ</p>
+    <p>Всего проведено {{ history.count }} заказов на сумму {{ history_sum }} руб.</p>
+{% endif %}
+
+{% if not last and not history.count %}
+<p>Это первый заказ</p>
 {% endif %}
