--- a/basket/templates/basket/thankyou.html
+++ b/basket/templates/basket/thankyou.html
@@ -1,9 +1,10 @@
 {% extends "basket/base.html" %}
 
+{% block title %}Заказ принят!{% endblock title %}
+{% block content_title %}Заказ принят!{% endblock content_title %}
+
 {% block content %}
-    <h3>Заказ принят!</h3>
-    <p>Поздравляем, ваш заказ получен. 
-    Номер Вашего последнего заказа {{ order.id }}.
+    <p>Поздравляем, ваш заказ получен. Номер Вашего заказа {{ order.id }}.
     Статус Вы сможете отследить на <a href="{% url order_status %}">странице проверки статуса заказа</a>. 
     В течение часа с вами свяжется наш менеджер для подтверждения наличия заказанных товаров.</p>
 {% endblock %}
