--- a/basket/templates/basket/confirm.html
+++ b/basket/templates/basket/confirm.html
@@ -1,9 +1,11 @@
 {% extends "basket/base.html" %}
 
+{% block title %}Оформление заказа{% endblock title %}
+{% block content_title %}Оформление заказа{% endblock content_title %}
+
 {% block content %}
 <div class="basket">
     {% if order %}
-    <h3>Оформление заказа</h3>
     <form action="." method="post">
         {{ form.as_ul }}
         <input type="button" class="submit" value="Назад" onclick="document.location = ('{% url basket %}')"/>
