Add-to-basket request return new summary

--- a/basket/templates/basket/panel.html
+++ b/basket/templates/basket/panel.html
@@ -1,20 +1,13 @@
 <script type="text/javascript">
 <!--
-var basket={};
-basket.add_to_basket = function add_to_basket(item_id) {
-	$.post('/basket/add/', {'item': item_id}, function (){
-		basket.reload_basket();
+function add_to_basket(item_id) {
+	$('#basket-is-loading').show();
+	$.post('{% url add_to_basket %}', {'item': item_id}, function (data) {
+		$('#basket-is-loading').hide();
+		$('#basket-summary').html(data);
 	});
 	return false;
-};
-
-basket.reload_basket = function reload_basket() {
-  $('#basket-is-loading').show();
-	$('#basket-summary').load('/basket/ajax/', null, function(){
-    $('#basket-is-loading').hide();
-	});
-	return false;
-};
+}
 //-->
 </script>
 <div id="basket-panel">
