Rename some templates, view and urls

--- a/basket/templates/basket/panel.html
+++ b/basket/templates/basket/panel.html
@@ -12,5 +12,5 @@ function add_to_basket(content_type, object_id) {
 </script>
 <div id="basket-panel">
     <div id="basket-is-loading" style="display: none;"><img src="/media/basket/img/ajax-loader.gif" /></div>
-    <div id="basket-summary">{% include 'basket/basket_panel.html' %}</div>
+    <div id="basket-summary">{% include 'basket/summary.html' %}</div>
 </div>
