--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -35,7 +35,7 @@ $(document).ready(function() {
 	        <tr>
 	            <th colspan="3">Итого</th>
 	            <th>{{ order.goods }}</th>
-	            <th>{{ order.price }}</th>
+	            <th>{{ order.summary }}</th>
 	        </tr>
 	    </table>
         <p>
