--- a/basket/templates/basket/panel.html
+++ b/basket/templates/basket/panel.html
@@ -1,6 +1,7 @@
 <script type="text/javascript">
 <!--
-function add_to_basket(content_type, object_id) {
+function add_to_basket(obj, content_type, object_id) {
+	$(".basket-added", $(obj).parents(".add-to-basket")).show();
 	$('#basket-is-loading').show();
 	$.post('{% url add_to_basket %}', {'content_type': content_type, 'object_id': object_id}, function (data) {
 		$('#basket-is-loading').hide();
