Fix panel template tag

--- a/basket/templates/basket/summary.html
+++ b/basket/templates/basket/summary.html
@@ -1,5 +1,5 @@
-{% if request.order.goods %}
-    <p>В вашей корзине {{ request.order.goods }} товаров на сумму <span class="price">{{ request.order.price }} руб.</span><br />
+{% if order.goods %}
+    <p>В вашей корзине {{ order.goods }} товаров на сумму <span class="summary">{{ order.summary }} руб.</span><br />
     <a href="{% url basket %}" title="Оформить заказ">Перейти в корзину</a></p>
 {% else %}
     <p>Ваша корзина пуста</p>
