--- a/basket/templates/basket/thankyou.html
+++ b/basket/templates/basket/thankyou.html
@@ -5,6 +5,6 @@
 
 {% block content %}
     <p>Поздравляем, ваш заказ получен. Номер Вашего заказа {{ order.id }}.
-    Статус Вы сможете отследить на <a href="{% url order_status %}">странице проверки статуса заказа</a>. 
+    Статус Вы сможете отследить на <a href="{% url order_status_for_id order.id %}">странице проверки статуса заказа</a>. 
     В течение часа с вами свяжется наш менеджер для подтверждения наличия заказанных товаров.</p>
 {% endblock %}
