--- a/basket/templates/basket/status.html
+++ b/basket/templates/basket/status.html
@@ -13,18 +13,18 @@
 	    </form>
     {% endif %}
 
-    {% if status %}
-        <p>Статус заказа: {{ status }}</p>
-        {% if history %}
+    {% if order %}
+        <p>Статус заказа: {{ order.get_status }}</p>
+        {% if order.orderstatus_set.all %}
 	        <p>История изменений:</p>
 	        <ul>
-	        {% for orderstatus in history %}
+	        {% for orderstatus in order.orderstatus_set.all %}
 	            <li>{{ orderstatus.date|date:"Y/m/d" }}: {{ orderstatus }}</li>
 	        {% endfor %}
 	        </ul>
         {% endif %}
     {% else %}
-        {% if order_id %}
+       {% if order_id %}
         	Заказа с номером {{ order_id }} не сущеcтвует. Проверьте правильность ввода.
         {% endif %}
     {% endif %}
