Show errors for quantity field in basket form

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -33,7 +33,7 @@ $(document).ready(function() {
 	            <td>{{ form.keep }}{{ form.content_type }}{{ form.object_id }}{{ form.id }}</td>
 	            <td><a target="_blank" href="{{ form.instance.content_object.get_absolute_url }}" title="Перейти на страницу товара">{{ form.instance.content_object }}</a></td>
 				<td>{{ form.instance.get_price }}</td>
-				<td>{{ form.quantity }}</td>
+				<td>{{ form.quantity }}{{ form.quantity.errors }}</td>
 				<td>{{ form.instance.get_sum }}</td>
 			</tr>
 	        {% endfor %}
