--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -18,7 +18,7 @@ $(document).ready(function() {
 });
 //-->
 </script>
-{% if order %}
+{% if formset.forms %}
     <form action="." method="post">
 	    <table class="checkout">
 	        <tr>
